--- a/package.json
+++ b/package.json
@@ -7,24 +7,23 @@
   "dependencies": {
     "del-cli": "^3.0.0",
     "faker": "^4.1.0",
-    "gatsby": "^2.19.5",
-    "gatsby-image": "^2.2.39",
-    "gatsby-plugin-benchmark-reporting": "*",
-    "gatsby-plugin-feed": "^2.3.26",
-    "gatsby-plugin-google-analytics": "^2.1.34",
-    "gatsby-plugin-manifest": "^2.2.38",
-    "gatsby-plugin-offline": "^3.0.32",
-    "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-sharp": "^2.4.0",
-    "gatsby-plugin-typography": "^2.3.21",
-    "gatsby-remark-copy-linked-files": "^2.1.36",
-    "gatsby-remark-images": "^3.1.42",
-    "gatsby-remark-prismjs": "^3.3.30",
-    "gatsby-remark-responsive-iframe": "^2.2.31",
-    "gatsby-remark-smartypants": "^2.1.20",
-    "gatsby-source-filesystem": "^2.1.46",
-    "gatsby-transformer-remark": "^2.6.48",
-    "gatsby-transformer-sharp": "^2.3.13",
+    "gatsby": "v3",
+    "gatsby-image": "v3",
+    "gatsby-plugin-feed": "v3",
+    "gatsby-plugin-google-analytics": "v3",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-offline": "v4",
+    "gatsby-plugin-react-helmet": "v4",
+    "gatsby-plugin-sharp": "v3",
+    "gatsby-plugin-typography": "v3",
+    "gatsby-remark-copy-linked-files": "v3",
+    "gatsby-remark-images": "v4",
+    "gatsby-remark-prismjs": "v4",
+    "gatsby-remark-responsive-iframe": "v3",
+    "gatsby-remark-smartypants": "v3",
+    "gatsby-source-filesystem": "v3",
+    "gatsby-transformer-remark": "v3",
+    "gatsby-transformer-sharp": "v3",
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -51,7 +50,6 @@
     "develop": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "postinstall": "del-cli markdown-pages && gatsby clean && NUM_PAGES=${NUM_PAGES:-2000} node md.generate.js"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   }
 }
