--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
   "dependencies": {
     "del-cli": "^3.0.0",
     "faker": "^4.1.0",
-    "gatsby": "v3",
-    "gatsby-image": "v3",
-    "gatsby-plugin-feed": "v3",
-    "gatsby-plugin-google-analytics": "v3",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-offline": "v4",
+    "gatsby": "^4.0.0-zz-next.8",
+    "gatsby-image": "^3.12.0-next.0",
+    "gatsby-plugin-feed": "^4.0.0-zz-next.3",
+    "gatsby-plugin-google-analytics": "^4.0.0-zz-next.3",
+    "gatsby-plugin-manifest": "^4.0.0-zz-next.4",
+    "gatsby-plugin-offline": "^5.0.0-zz-next.3",
     "gatsby-plugin-react-helmet": "v4",
-    "gatsby-plugin-sharp": "v3",
-    "gatsby-plugin-typography": "v3",
-    "gatsby-remark-copy-linked-files": "v3",
+    "gatsby-plugin-sharp": "^4.0.0-zz-next.6",
+    "gatsby-plugin-typography": "^4.0.0-zz-next.2",
+    "gatsby-remark-copy-linked-files": "^5.0.0-zz-next.2",
     "gatsby-remark-images": "v4",
     "gatsby-remark-prismjs": "v4",
-    "gatsby-remark-responsive-iframe": "v3",
-    "gatsby-remark-smartypants": "v3",
-    "gatsby-source-filesystem": "v3",
-    "gatsby-transformer-remark": "v3",
-    "gatsby-transformer-sharp": "v3",
+    "gatsby-remark-responsive-iframe": "^5.0.0-zz-next.2",
+    "gatsby-remark-smartypants": "^5.0.0-zz-next.2",
+    "gatsby-source-filesystem": "^4.0.0-zz-next.3",
+    "gatsby-transformer-remark": "^5.0.0-zz-next.3",
+    "gatsby-transformer-sharp": "^4.0.0-zz-next.3",
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
